# legitirust

./: Cargo.toml  LICENSE
src/: client.rs  lib.rs  types.rs
tests/: player.rs  world.rs
