[package]
name = "legitirust"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] } 
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
